# Trabalho01-SGBD

./: CMakeLists.txt  README.md
data/: bancodedados.csv
include/: buffer_manager.hpp  buffer_manager_CLOCK.hpp  buffer_manager_FIFO.hpp  buffer_manager_LRU.hpp  buffer_manager_MRU.hpp  page.hpp
src/: buffer_manager.cpp  buffer_manager_CLOCK.cpp  buffer_manager_FIFO.cpp  buffer_manager_LRU.cpp  buffer_manager_MRU.cpp  main.cpp  page.cpp
